<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/ud_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/default_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#E1F5FE"
            android:visibility="visible">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:contentDescription="@string/context_arrow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.85"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_curve_arrow" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/lemon"
                android:lines="3"
                android:maxLines="5"
                android:minLines="2"
                android:text="@string/click_to_start"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:layout_constraintEnd_toEndOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-smallcaps"
                android:lineSpacingExtra="10sp"
                android:text="@string/main_text"
                android:textAlignment="center"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/content_description_logo"
                android:scaleType="fitStart"
                app:layout_constraintEnd_toEndOf="@+id/textView2"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                app:srcCompat="@drawable/ic_ud_logo" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#E1F5FE"
            android:visibility="gone" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/progress_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#E1F5FE"
            android:visibility="gone"
            tools:visibility="visible">


            <ProgressBar
                android:id="@+id/progress_circle"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal|center_vertical"
                android:indeterminate="true"
                android:indeterminateBehavior="repeat"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/progress_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/progress_text"
                app:layout_constraintBottom_toTopOf="@id/progress_circle"
                app:layout_constraintEnd_toEndOf="@id/progress_circle"
                app:layout_constraintStart_toStartOf="@id/progress_circle" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:background="#cacaca"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/header_drawer"
        app:menu="@menu/menu_sorted" />

</androidx.drawerlayout.widget.DrawerLayout>